tests/rosetta/transpiler/Java/babylonian-spiral.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenbabylonian-spiral1281693363/001/Main.java:22: error: int cannot be dereferenced
        while ((h.length > 0 && ((int)h[0].getOrDefault("s", 0)).equals(s))) {
                                                                ^
Note: /tmp/TestJavaTranspiler_Rosetta_Goldenbabylonian-spiral1281693363/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
